# code-ex

./: .gitmodules  CMakelists.txt  READMD.md  README.md  cmake_build.sh  cmake_custom.sh  main.py  test_profile.prof
Inc/: data_structure.h  ds_is_balence_parentheses.h  ds_is_cycle.h  ds_linked_list.h  ds_queue_and_stack.h  ds_queue_with_two_stack.h  problem1.h  problem2.h  problem3.h  recursion.h  testclass.h
Src/: ds_is_cycle.cc  ds_linked_list.cc  main.cc  problem1.cc  problem2.cc  testDS.cc
Src/ds/: ds_binarysearchtree.cc  ds_is_cycle.cc  ds_linked_list.cc  ds_queue_and_stack.cc  ds_string_contacts.cc
Src/recursion/: graph.cc
Src/test/: memfree.cc
cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  code-coverage.cmake  default-toolchain.cmake
cmake/examples/cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/cmake/: CMakelists.txt
examples/cmake/src/: CMakelists.txt  main.cc
examples/cpp/: CMakeLists.txt  CMakelists.txt
examples/cpp/Inc/: algorithm.hpp  boost.hpp  data_structure.h  data_structure.hpp  design_pattern.hpp  easy_profiler.hpp  log.h  log.hpp  spdlog_scratch.hpp  std.hpp  test_c_function.h  test_cpp_function.h  test_cpp_function.hpp  test_factorial_core.h  test_factorial_core.hpp  test_linux.hpp
examples/cpp/Src/: main.cc
examples/cpp/Src/algorithm/: bellman-ford.cc  graph.cc  test_bellman_ford.cc  test_dijkstra.cc
examples/cpp/Src/boost/property_tree/: test_xml_parsing.cc
examples/cpp/Src/c-functions/: test_condition.c  test_define_func.c  test_mem_alloc.c  test_switch_func.c
examples/cpp/Src/c-functions/static_func/: test_static_func.c  test_static_func_internal.c  test_static_func_internal.h
examples/cpp/Src/cpp-functions/: test_address.cc  test_atomic.cc  test_chrono.cc  test_class.cc  test_constexp.cc  test_copy_elision.cc  test_date.cc  test_ds.cc  test_end_func_const.cc  test_exception.cc  test_exec.cc  test_filesystem.cc  test_improper_preprocess.c  test_memfree.cc  test_post_prefix.cc  test_rand.cc  test_ref.cc  test_rtti.cc  test_smart_pointer.cc  test_string.cc  test_struct.cc  test_templete.cc  test_type.cc  test_type_cast.cc  test_type_traits.cc  test_typedef.cc  test_uniform_init.cc  test_var_type.cc  test_vector.cc  test_vector_reference.cc  test_void.cc
examples/cpp/Src/cpp-functions/function/: test_function.cc  test_function_argument.cc  test_function_pointer.cc  test_lambda.cc
examples/cpp/Src/cpp-functions/rvalue/: test_rvalue.cc  test_rvalue_simple.cc
examples/cpp/Src/cpp-functions/thread/: test_async.cc  test_atomic.cc  test_multithread.cc  test_sync_and_async.cc  test_thread.cc  test_thread_pattern.cc  test_thread_pool.cc
examples/cpp/Src/data-structure/: ds_binarysearchtree.cc  ds_heap.cc  ds_is_cycle.cc  ds_linked_list.cc  ds_string_contacts.cc  ds_tree.cc
examples/cpp/Src/data-structure/recursion/: graph.cc
examples/cpp/Src/design-pattern/: test_factorial.cc  test_proto_type.cc  test_type_object_pattern.cc
examples/cpp/Src/linux/: test_filesystem_linux.cc
examples/cpp/Src/optimization/simd/: simd.cc  simd_scratch.cc
examples/cpp/Src/server-client/: client.cc
examples/cpp/Src/spdlog/: scratch_spdlog.cc
examples/cpp/Src/utils/: log.cc
examples/python/: .gitignore  main.py
examples/python/deeplearning/: .gitignore
examples/python/deeplearning/tinyml/: quantization.py
examples/python/deeplearning/torch/: .gitignore  audio.py
examples/python/recursion/: graph.py
examples/shell/: add_string.sh  append_std.sh  argument.sh  array.sh  bc.sh  cd.sh  check_file.sh  count_file.sh  cpu_usage.sh  current_path.sh  echo_to_shell.sh  find_cpu_usage.sh  find_path.sh  for_loop.sh  func.sh  function_return.sh  get_command_result.sh  gh.sh  if_statement.sh  jump_error.sh  links.sh  log.sh  mv.sh  output.txt  parellel.sh  parse_argu.sh  parse_string.sh  path.sh  python_venv.sh  raise_error.sh  random.sh  run_several_line.sh  sed.sh  split_string.sh  ssh_result.sh  string.sh  string_to_int.sh  tar.sh  tmp.parse  tmp2.parse  (+4 more)
examples/shell/set-option/: set.cc  set.sh
examples/shell/test/: test.cc
examples/swig/nested_class/: build.sh  clean.sh  compile_flags.txt  test.py  x.cc  x.hpp  x.i
py/: .gitignore  __init__.py  ds_is_balence_parentheses.py  ds_queue_with_two_stack.py  problem2.py
py/ds/: .gitignore
temp/: test  test.cc
tests/: CMakelists.txt  main.cc
